--- a/big_homework.ipynb
+++ b/big_homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,11 +49,8 @@
        "      <th></th>\n",
        "      <th>Survived</th>\n",
        "      <th>Sex</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>age_0_26</th>\n",
-       "      <th>age_27_50</th>\n",
-       "      <th>age_51_76</th>\n",
+       "      <th>child</th>\n",
+       "      <th>adult</th>\n",
        "      <th>Class_1</th>\n",
        "      <th>Class_2</th>\n",
        "      <th>Class_3</th>\n",
@@ -65,10 +62,7 @@
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -77,11 +71,8 @@
        "      <th>1</th>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -89,9 +80,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -104,10 +92,7 @@
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -116,11 +101,8 @@
        "      <th>4</th>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -130,22 +112,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Survived  Sex  SibSp  Parch  age_0_26  age_27_50  age_51_76  Class_1   \n",
-       "0     False    0      0      0         0          1          0        0  \\\n",
-       "1      True    1      1      0         0          1          0        0   \n",
-       "2     False    0      0      0         0          0          1        0   \n",
-       "3     False    0      0      0         0          1          0        0   \n",
-       "4      True    1      1      1         1          0          0        0   \n",
-       "\n",
-       "   Class_2  Class_3  \n",
-       "0        0        1  \n",
-       "1        0        1  \n",
-       "2        1        0  \n",
-       "3        0        1  \n",
-       "4        0        1  "
+       "   Survived  Sex  child  adult  Class_1  Class_2  Class_3\n",
+       "0     False    0      0      1        0        0        1\n",
+       "1      True    1      0      1        0        0        1\n",
+       "2     False    0      0      1        0        1        0\n",
+       "3     False    0      0      1        0        0        1\n",
+       "4      True    1      0      1        0        0        1"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,22 +141,22 @@
     "\n",
     "data['Survived'] = [x == 1 for x in data['Survived']]\n",
     "\n",
-    "data['age_0_26'] = data['Age'].apply(lambda x: 1 if 0 <= x <= 26 else 0)\n",
-    "data['age_27_50'] = data['Age'].apply(lambda x: 1 if 27 <= x <= 50 else 0)\n",
-    "data['age_51_76'] = data['Age'].apply(lambda x: 1 if 51 <= x <= 76 else 0)\n",
+    "data['child'] = data['Age'].apply(lambda x: 1 if 0 <= x <= 18 else 0)\n",
+    "data['adult'] = data['Age'].apply(lambda x: 1 if 19 <= x <= 76 else 0)\n",
+    "\n",
     "\n",
     "\n",
     "data['Class_1'] = data['Pclass'].apply(lambda x: 1 if x == 1 else 0)\n",
     "data['Class_2'] = data['Pclass'].apply(lambda x: 1 if x == 2 else 0)\n",
     "data['Class_3'] = data['Pclass'].apply(lambda x: 1 if x == 3 else 0)\n",
     "\n",
-    "bdata = data.drop(['Age', 'Pclass'], axis=1)\n",
+    "bdata = data.drop(['Age', 'Pclass', 'SibSp', 'Parch'], axis=1)\n",
     "bdata.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,41 +168,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Binarized Binary Classifier\n",
     "\n",
-    "bin_cls = fcalc.classifier.BinarizedBinaryClassifier(x1_train.values, y1_train.to_numpy(), method=\"standard-support\")"
+    "bin_cls = fcalc.classifier.BinarizedBinaryClassifier(x1_train.values, y1_train.to_numpy(), method=\"standard\", alpha=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bin_cls.predict(x1_test.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.0\n"
+      "[0. 1. 0. 0. 1. 0. 1. 0. 1. 0. 0. 1. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0. 1. 0.\n",
+      " 1. 1. 1. 0. 0. 0. 0. 1. 1. 0. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 0. 0. 1. 1.\n",
+      " 1. 0. 0. 1. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.\n",
+      " 0. 1. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 0. 1. 0. 1. 1.\n",
+      " 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bin_cls.predict(x1_test.values)\n",
+    "print(bin_cls.predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9841269841269841\n",
+      "0.9761904761904763\n"
      ]
     }
    ],
    "source": [
     "print(accuracy_score(y1_test, bin_cls.predictions))\n",
-    "print(f1_score(y1_test, bin_cls.predictions, average = 'weighted')) "
+    "print(f1_score(y1_test, bin_cls.predictions)) "
    ]
   },
   {
@@ -239,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +459,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,41 +509,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Binarized Binary Classifier\n",
     "\n",
-    "bin_cls = fcalc.classifier.BinarizedBinaryClassifier(x2_train.values, y2_train.to_numpy(), method=\"standard-support\")"
+    "bin_cls = fcalc.classifier.BinarizedBinaryClassifier(x2_train.values, y2_train.to_numpy(), method=\"standard\",  alpha=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bin_cls.predict(x2_test.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.0\n"
+      "[0. 1. 1. 1. 1. 1. 1. 1. 0. 1. 1. 0. 0. 0. 1. 1. 0. 1. 0. 0. 0. 0. 0. 1.\n",
+      " 1. 1. 1. 1. 0. 0. 1. 1. 0. 0. 0. 0. 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 0. 1.\n",
+      " 1. 1. 1. 0. 1. 1. 1. 1. 0. 1. 1. 1. 1. 1. 0. 0. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 0. 1. 1. 1. 1. 1. 1. 0. 1. 1. 1. 1. 1. 0. 1. 1. 0. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 0. 0. 1. 0. 1. 1. 1. 0. 1. 1. 1. 1. 1. 1. 1. 0. 0. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 0. 1. 1. 0. 0. 1. 0. 1. 1.\n",
+      " 1. 1. 0. 0. 1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 1. 1. 0. 1. 0. 0. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 0. 0. 1. 1. 1. 1. 1. 0. 0. 1. 0. 0. 0. 0. 1. 0. 1. 1. 1. 1.\n",
+      " 1. 0. 1. 1. 1. 1. 1. 1. 1. 0. 1. 1. 1. 1. 0. 0. 1. 0. 1. 1. 1. 1. 0. 1.\n",
+      " 1. 0. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 1. 0. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 1. 0. 1. 1. 1. 1. 1. 1. 0. 0. 0. 1.\n",
+      " 1. 1. 1. 0. 0. 1. 1. 1. 0. 1. 1. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bin_cls.predict(x2_test.values)\n",
+    "print(bin_cls.predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6630434782608695\n",
+      "0.7335243553008597\n"
      ]
     }
    ],
    "source": [
     "print(accuracy_score(y2_test, bin_cls.predictions))\n",
-    "print(f1_score(y2_test, bin_cls.predictions, average = 'macro'))"
+    "print(f1_score(y2_test, bin_cls.predictions))"
    ]
   },
   {
@@ -566,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,41 +685,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Binarized Binary Classifier\n",
     "\n",
-    "bin_cls = fcalc.classifier.BinarizedBinaryClassifier(x3_train.values, y3_train.to_numpy(), method=\"standard-support\")"
+    "bin_cls = fcalc.classifier.BinarizedBinaryClassifier(x3_train.values, y3_train.to_numpy(), method=\"standard\",  alpha=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bin_cls.predict(x3_test.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.0\n"
+      "[0. 0. 0. 1. 1. 1. 1. 0. 0. 1. 0. 0. 0. 0. 1. 0. 1. 1. 0. 1. 1. 0. 0. 0.\n",
+      " 1. 0. 1. 0. 0. 0. 1. 0. 1. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1.\n",
+      " 1. 0. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 1. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 1. 1. 0. 1.\n",
+      " 1. 0. 0. 1. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.\n",
+      " 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 1. 1. 0. 1.\n",
+      " 0. 1. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bin_cls.predict(x3_test.values)\n",
+    "print(bin_cls.predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8771929824561403\n",
+      "0.8173913043478261\n"
      ]
     }
    ],
    "source": [
     "print(accuracy_score(y3_test, bin_cls.predictions))\n",
-    "print(f1_score(y3_test, bin_cls.predictions, average = 'macro'))"
+    "print(f1_score(y3_test, bin_cls.predictions))"
    ]
   },
   {
@@ -722,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
